static/css/base.css
html {
    height: 100%;
}

body {
    font-family: 'Courier New', Courier, monospace;
}

.nav-bg-color{
    background-color: #0e6967;
}

a{
    color: black;
}

li > a{
    color: white;
}


a:hover{
    cursor: pointer;
    color: #dc3545;
}

.bg-black {
    background-color: black;
}

.my-secondary {
    background-color: #0fbdad;
}

.my-button {
    color: #fd473b;
}

.text-white{
    color: white;
}

.navbar{
    padding: 0;
}

.second-nav {
    padding: 0;
    background-color:#0e6967;
    min-width: 100%;
}

.fas{
    color: white;
}

.fa-cart-shopping{
    color: white;
}

.usernav-image{
    height: 1.9em;
    width: 1.9em;
    border-radius: 50%;
    border: solid white 2px;
}

button.navbar-toggler{
    border: solid 2px white !important;
    margin-left: 5px;
}

.main-logo-link {
    width: fit-content;
}

.cart-amount{
    color: white;
}

.shop-now-button {
    background: #fd473b;
    color: white;
    min-width: 260px;
}

.btn-black {
    background: black;
    color: white;
}

.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-white:hover,
.btn-white:active,
.btn-white:focus {
    background: white;
    color: #fd473b;
}

.hero-image{
    background: url('{{MEDIA_URL}}/media/hero-image1.jpg') no-repeat center top fixed;
    background-repeat: no-repeat;
    background-position: center top;
    background-attachment: fixed;
    height: 380px;
    min-width: 100%;
}

.hero-row{
    margin-top: 60px;
}

.overlay{
    background-color: rgba(14, 105, 103, 0.8);
    border-radius: 5px;
    text-align: center;
    padding: 20px;
}

.row-overlay{
    height: inherit;
}

.overlay-message{
    height: inherit;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    font-weight: 26px;
    
}

.cta-h1{
    font-size: 28px;
    color: white;
    margin-top: 15px;
}

.col-h2{
    border: solid red 2px;
}

.row-h2{
    border: solid green 2px;
}


.features-cont{
    height: 120px;
    background-color: #0e6967;
    margin-bottom: 60px;
}

.div-row{
    height: inherit;
}

.div-col{
    text-align: center;
    color: white;
    border-bottom: solid white 1px;
    background-color: #0e6967;
}

.feat-icon{
    font-size: 24px;
    margin-top: 10px;
}

.footer-container{
    margin-top: 50px;
    background-color: #0e6967;
    color: white;
    text-align: center;
    width: 100%;
}

.footer-heading{
    color: #fd473b;
    font-weight: 800;
}

.heading{
    margin-bottom: 200px;
}

.footer-row{
    padding: 30px;
}

.socials-list, .about-list, .contact-list, .pages-list, .legal-list{
    padding: 0;
}

li{
    list-style-type: none;
}

/* Products Page */

.product-image{
    height: 150px;
    width: 150px;
    align-self: center;
}

.product-row{
    justify-content: center;
    align-content: center;
}

.products-page{
    background-color: rgba(0, 0, 0, 0.05);
}

.card-footer{
    text-align: center;
}

/* product details page */

.product-detail-container{
    min-height: 500px;
    border: solid black 2px;
    margin-top: 30px;
    padding-top: 30px;
}

.product-detail-image{
    height: 225px;
    width: 225px;
}

.product-detail-left{
    text-align: center;
}

.add-cart-btn{
    margin-top: 30px;
}

/* Cart Page */

.cart-left{
    border: solid 2px #0fbdad;
    border-radius: 15px;
}

.cart-right{
    height: 300px;
    border: solid 2px #0fbdad;
    margin-left: 25px;
    margin-right: -25px;
    border-radius: 15px;
    padding: 5px;
}

.cart-image{
    max-height: 70px;
    max-width: 70px;
}

.continue-shopping-btn{
    margin-bottom: 10px;
}

.cart-title{
    text-decoration: none;
    color: black;
}

.update-link, .remove-item{
    cursor: pointer;
}

.message-container{
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 1000;
}

.custom-toast{
    overflow: visible;
}

.toast-capper{
    height: 2px;
}


/* All auth templates */
.allauth-container{
    text-align: center;
}

.logout{
    min-height: 200px;
}

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}

/* Media Queries */


@media (min-width: 1200px) {
    .container {
      max-width: 80%;
    }

    .logout{
        min-height: 300px;
    }
    .articles-container{
        margin-top: 40px;
    }
  }

  @media (min-width: 481px) and (max-width: 768px) {
    .articles-h3{
      margin-top: 200px;
    }
  }

  @media (min-width: 768px ){
    .articles-h3{
        margin-top: 50px;
    }
  }


  @media only screen and (max-width: 765px){
    .product-detail-right{
        text-align: center;
    }
  }
  
  /* fixed top navbar only on medium and up */
  @media (min-width: 992px) {
      .fixed-top-desktop-only {
          top: 0;
          right: 0;
          left: 0;
          z-index: 1030;
      }

      .logout{
        min-height: 250px;
    }

  }

  @media only screen and (max-width: 480px){
	/*Small smartphones [325px -> 425px]*/
    .mobile-responsive{
        font-size: 12.5px;
    }

    .nav-link{
        padding: 2.5px;
    }

    .navbar{
        padding-top: 10px;
    }

    .navbar-toggler{
        padding: 2.5px;
        margin-bottom: 5px;
    }

    .logo-font{
        font-size: 12.5px;
    }

    .cta-h1{
        font-size: 15px;
    }

    .cta-h2{
        font-size: 12.5px;
    }

    .overlay{
        padding: 0;
        padding-bottom: 5px;
    }

    .shop-now-button{
        padding: 0;
        margin: 0;
    }

    #articles-container{
        margin-top: 340px;
    }

    .card{
        margin-bottom: 30px;
    }

    .add-cart-btn{
        margin-bottom: 15px;
    }
}
  

